--- a/public/css/post.css
+++ b/public/css/post.css
@@ -1,3 +1,51 @@
 .metadata, .content {
     border-color: transparent;
 }
+
+/* blocks */
+.block {
+    position: relative;
+    width: 100%;
+    margin-bottom: .25rem;
+}
+
+.block.text, .audio, .image {
+    line-height: 0;
+}
+
+/* media */
+
+.image {
+    text-align: center;
+}
+.image img {
+    max-width: 100%;
+    max-height: var(--max-img-height);
+}
+
+.audio audio {
+    width: 100%;
+}
+
+/* album block */
+
+.block.album {
+    background: lightgray;
+}
+.slides {
+    height: var(--max-img-height);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.slides > div {
+    display: none;
+}
+.slides > div:first-child {
+    display: block;
+}
+.navigation {
+    margin-top: .25rem;
+    width: 100%;
+    text-align: center;
+}
