--- a/public/css/post.css
+++ b/public/css/post.css
@@ -1,7 +1,3 @@
-.metadata, .content {
-    border-color: transparent;
-}
-
 /* blocks */
 .block {
     position: relative;
@@ -32,20 +28,30 @@
 .block.album {
     background: lightgray;
 }
-.slides {
+.block.album .slides {
     height: var(--max-img-height);
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.slides > div {
+.block.album .slides > div {
     display: none;
 }
-.slides > div:first-child {
+.block.album .slides > div:first-child {
     display: block;
 }
-.navigation {
+.block.album .navigation {
     margin-top: .25rem;
-    width: 100%;
+    width: var(--max-post-width);
     text-align: center;
+    font-family: monospace;
+}
+
+.navigation a:hover, .navigation a:active {
+    background-color: black;
+    color: white;
+}
+.navigation a {
+    color: black;
+    border-color: black;
 }
