--- a/public/css/new.css
+++ b/public/css/new.css
@@ -42,6 +42,7 @@ input[type="file"] {
 /* post builder */
 
 #post-builder {
+    max-width: calc(100% - 1em);
     width: var(--max-post-width);
     box-sizing: border-box;
 }
@@ -82,6 +83,7 @@ textarea {
 }
 
 .block.upload .center {
+    width: 100%;
     position: absolute;
     top: 50%;
     left: 50%;
