--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -9,17 +9,17 @@
 
     <%- include('fragments/header.ejs')  %>
 
-    <main>
+    <main class="posts-list">
         <% for (let i=0; i<posts.length; i++) { %>
             <% let post = posts[i] %>
 
             <div class="indexed-post">
                 <span><%= posts.length - i %></span>
-                <a class="title" href="<%= root %><%= post.path %>">
+                <a class="title" href="<%= root %>posts/<%= post.path %>">
                     <%= post.title %>
                 </a>
-                <a style="white-space: pre" href="<%= post.author_path %>"><em><%= post.author %></em></a>
-                <span><%= post.date %></span>
+                <a style="white-space: pre" href="<%= root %>posts/<%= post.author_path %>"><em><%= post.author %></em></a>
+                <span title="<%= post.timestamp %>"><%= post.date %></span>
             </div>
         <% } %>
     </main>
