--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,6 +1,8 @@
 @media only screen and (max-width: 767px) {
     main {
         padding: 2em 0;
+    }
+    main, nav {
         text-align: center;
     }
     main > div {
