--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -4,6 +4,11 @@
     <%- include ('fragments/global-head.ejs') %>
     <title>untitled social</title>
     <link rel="stylesheet" href="<%= root %>css/index.css">
+    <style>
+        main {
+            gap: .5em;
+        }
+    </style>
 </head>
 <body>
 
