--- a/public/views/fragments/header.ejs
+++ b/public/views/fragments/header.ejs
@@ -1,6 +1,6 @@
 <header>
     <a href="<%= root %>">untitled social</a>
-    <a href="<%= root %>new">+ new post</a>
+    <a href="<%= root %>new" class="new-post-button">+</a>
     <div class="grow">for us</div>
-    <a href="<%= root %>posts">index</a>
+    <a href="<%= root %>posts" class="index-button">i</a>
 </header>
