--- a/public/views/home.ejs
+++ b/public/views/home.ejs
@@ -36,7 +36,9 @@
                     </div>
                     <% if (post.replying_to) { %>
                         <div class="reply">
-                            replying to <a href="<%= root %>posts/<%= post.replying_to.path %>"><%= post.replying_to.title %></a> by <a href="<%= root %>posts/<%= post.replying_to.author_path %>"><%= post.replying_to.author %></a>
+                            <span>re:</span>
+                            <span><a href="<%= root %>posts/<%= post.replying_to.path %>"><%= post.replying_to.title %></a></span>
+                            <span>by <a href="<%= root %>posts/<%= post.replying_to.author_path %>"><%= post.replying_to.author %></a></span>
                         </div>
                     <% } %>
                     <% if (post.body != '') { %>
@@ -74,13 +76,15 @@
         <footer>
             <nav>
                 <% if (page > 1) { %>
-                    <a href="<%= root %>page/<%= Number(page) - 1%>">&lt;-</a>
+                    <a href="<%= root %>page/<%= Number(page) - 1%>">&lt;--</a>
                 <% } else { %>
-                    <span></span>
+                    <pre>   </pre>
                 <% } %>
                 <%= page %>
                 <% if (page < max_page) { %>
-                    <a href="<%= root %>page/<%= Number(page) + 1 %>">-&gt;</a>
+                    <a href="<%= root %>page/<%= Number(page) + 1 %>">--&gt;</a>
+                <% } else { %>
+                    <pre>   </pre>
                 <% } %>
             </nav>
         </footer>
